--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller --onefile --noconsole --name win69updater updater_script.py
+        pyinstaller --onefile --noconsole --name win69updater win69updater.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
