--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install pyinstaller
+        pip install pycryptodome
 
     - name: Build executable
       run: |
