--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         pip install pyinstaller
         pip install pycryptodome
+        pip install PyQt5
 
     - name: Build executable
       run: |
