--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install pyinstaller
-        pip install pycryptodome
-        pip install PyQt5
+        pip install -r requirements.txt
 
     - name: Build executable
       run: |
